Save highscore in local storage and display it in game

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
             </div>
         </div>
         <div id="game_panel" class="d-none">
-            <div id="score">0</div>
-
+            <div id="scores">
+                Score: <span id="score">0</span> | Highscore:
+                <span id="highscore"></span>
+            </div>
             <canvas id="app" width="600" height="600"> </canvas>
         </div>
         <script src="assets/js/Food.js"></script>
